--- a/src/main/java/Client/MainWindow.fxml
+++ b/src/main/java/Client/MainWindow.fxml
@@ -9,7 +9,7 @@
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0">
          <left>
-            <TreeView id="treeView" prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <TreeView fx:id="treeView" prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
          </left>
          <center>
             <DialogPane BorderPane.alignment="CENTER" />
