--- a/src/main/java/Client/CreateIndexWindow.fxml
+++ b/src/main/java/Client/CreateIndexWindow.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -12,19 +13,45 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.CreateIndexWindow">
    <children>
-      <VBox spacing="5.0">
+      <VBox prefWidth="300.0" spacing="5.0">
          <children>
-            <Label text="Create index on attribute">
+            <Label text="Create index ">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="attributesMenu" prefWidth="150.0" />
+            <TextField fx:id="indexNameTextField" onAction="#enableCreateButton" promptText="index name" />
+            <Label text="on attributes">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <VBox fx:id="attributesMenuBox">
+               <children>
+                  <ChoiceBox fx:id="attributesChoice" />
+               </children>
+            </VBox>
+            <HBox>
+               <children>
+                  <Button fx:id="addButton" mnemonicParsing="false" onAction="#addMoreAttribute" text="Add attribute" />
+                  <Region HBox.hgrow="ALWAYS" />
+                  <Button fx:id="removeButton" disable="true" mnemonicParsing="false" onAction="#removeLast" text="Remove last attribute" />
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets top="20.0" />
+               </padding>
+            </HBox>
             <HBox>
                <children>
                   <Region HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" onAction="#create" text="CREATE" />
+                  <Button fx:id="createButton" disable="true" mnemonicParsing="false" onAction="#create" text="CREATE" />
                </children>
+               <padding>
+                  <Insets top="20.0" />
+               </padding>
             </HBox>
          </children>
          <opaqueInsets>
