insertnel int key-k szamkent beszurva + projekt kicsit strukturalva

--- a/src/main/java/Client/View/CreateIndexWindow.fxml
+++ b/src/main/java/Client/View/CreateIndexWindow.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.CreateIndexWindow">
+<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Control.CreateIndexWindow">
    <children>
       <VBox prefHeight="260.8" prefWidth="300.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
