--- a/src/main/java/Client/View/InsertRowsWindow.fxml
+++ b/src/main/java/Client/View/InsertRowsWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.InsertRowsWindow">
+<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Control.InsertRowsWindow">
    <children>
       <VBox spacing="10.0">
          <children>
