--- a/src/main/java/Client/View/NewTable.fxml
+++ b/src/main/java/Client/View/NewTable.fxml
@@ -19,7 +19,7 @@
 
 <?import javafx.collections.FXCollections?>
 <?import java.lang.String?>
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.NewTable">
+<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Control.NewTable">
    <children>
       <VBox>
          <children>
